--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,11 @@
 	],
 	"rules": {
 		"no-console": "warn",
-		"no-unused-vars": "warn"
+		"no-unused-vars": "warn",
+		"react-hooks/rules-of-hooks": "error",
+		"react-hooks/exhaustive-deps": "warn"
 	},
-	"plugins": ["react", "import", "jsx-a11y"],
+	"plugins": ["react", "import", "jsx-a11y", "react-hooks"],
 	"parserOptions": {
 		"ecmaVersion": 2018,
 		"sourceType": "module",
