--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,12 +8,14 @@
 		"prettier/react"
 	],
 	"rules": {
+		"react/prop-types": "off",
 		"no-console": "warn",
 		"no-unused-vars": "warn",
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn"
 	},
 	"plugins": ["react", "import", "jsx-a11y", "react-hooks"],
+	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 2018,
 		"sourceType": "module",
