--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/preset-env": "^7.5.5",
+		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.2",
 		"eslint": "^6.1.0",
 		"eslint-config-prettier": "^6.0.0",
