--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"prettier": "^1.18.2"
 	},
 	"dependencies": {
+		"@emotion/babel-preset-css-prop": "^10.0.14",
+		"@emotion/core": "^10.0.14",
 		"axios": "^0.19.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6"
